# renderdag-ts

./: .gitignore  .prettierignore  README.md  package-lock.json  package.json  tsconfig.json
fixture-gen/: Cargo.toml
fixture-gen/src/: main.rs
scripts/: dump-fixtures.mjs  regen-fixtures.sh  update-vendor.sh  verify-before-publish.sh
src/: ascii.ts  ascii_large.ts  box_drawing.ts  column.ts  index.ts  output.ts  pad.ts  pipeline.ts  render.ts
src/pipeline/: graph_text_renderer.ts  graph_to_row_shape.ts  prefix_lines_to_text.ts  row_shape_to_prefix_lines.ts  types.ts
src/pipeline/row_shape_to_prefix_lines/: ascii.ts  ascii_large.ts  box_drawing.ts
tests/: fixtures.test.ts
tests/fixtures/: named.json  random.json
